feat: add roles validations